--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -148,8 +148,10 @@
     <Compile Include="Models\FlagTips.cs" />
     <Compile Include="Models\Kind\KindMatchModel.cs" />
     <Compile Include="Models\Kind\KindModel.cs" />
+    <Compile Include="Models\Repair\RepairRecordModel.cs" />
     <Compile Include="Models\State\StateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\FileUploadService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
