--- a/888repair/packages.config
+++ b/888repair/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Aspose.Cells" version="8.4.0" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
+  <package id="EPPlus" version="6.2.2" targetFramework="net45" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net45" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net45" />
