个人问题列表查看报修单页面

--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Repair\LogRepairVw.cshtml" />
     <Content Include="Views\Repair\ITRepairVw.cshtml" />
     <Content Include="Views\Repair\RersonalProblemIndex.cshtml" />
+    <Content Include="Views\Repair\RepairDetailVw.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
