--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Repair\ProblemAllVw.cshtml" />
     <Content Include="Views\Repair\ProblemAllDetailVw.cshtml" />
     <Content Include="Views\Login\LoginIndex.cshtml" />
+    <Content Include="Views\Home\MobileIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
