调整移动端填写报修单布局

--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -242,6 +242,9 @@
     <Content Include="Views\Repair\ProblemAllDetailVw.cshtml" />
     <Content Include="Views\Login\LoginIndex.cshtml" />
     <Content Include="Views\Home\MobileIndex.cshtml" />
+    <Content Include="Views\Repair\RepairMobileIndex.cshtml" />
+    <Content Include="Views\Repair\ITRepairMobileVw.cshtml" />
+    <Content Include="Views\Repair\LogRepairMobileVw.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
