--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -245,6 +245,8 @@
     <Content Include="Views\Repair\RepairMobileIndex.cshtml" />
     <Content Include="Views\Repair\ITRepairMobileVw.cshtml" />
     <Content Include="Views\Repair\LogRepairMobileVw.cshtml" />
+    <Content Include="Views\Repair\RPMobileIndex.cshtml" />
+    <Content Include="Views\Repair\RepairDetailMobileVw.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
