--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -173,11 +173,13 @@
     <Compile Include="Models\FlagTips.cs" />
     <Compile Include="Models\Kind\KindMatchModel.cs" />
     <Compile Include="Models\Kind\KindModel.cs" />
+    <Compile Include="Models\Repair\EmailModel.cs" />
     <Compile Include="Models\Repair\RepairRecordModel.cs" />
     <Compile Include="Models\Repair\StepRecordModel.cs" />
     <Compile Include="Models\State\StateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\FileUploadService.cs" />
+    <Compile Include="Service\SendMailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
