增加南校区分支

--- a/888repair/Web.config
+++ b/888repair/Web.config
@@ -8,7 +8,7 @@
     <section name="routeJs" type="RouteJs.RouteJsConfigurationSection, RouteJs" />
   </configSections>
   <connectionStrings>
-    <add name="Repair" connectionString="Data Source = 192.168.80.247; Database=888_KsNorth; user id = kcis_db; password =db2008_kcis; Connection Timeout=30;" />
+    <add name="Repair" connectionString="Data Source = 192.168.80.247; Database=888_KsSouth; user id = kcis_db; password =db2008_kcis; Connection Timeout=30;" />
     <!--<add name="Email" connectionString="Data Source=192.168.80.247;Database=Common;Uid=kcis_db;Pwd=db2008_kcis; Connection Timeout=30;" />-->
   </connectionStrings>
   <appSettings>
