增加问题列表个人模块

--- a/888repair/888repair.csproj
+++ b/888repair/888repair.csproj
@@ -254,6 +254,8 @@
     <Content Include="Views\Repair\RPMobileIndex.cshtml" />
     <Content Include="Views\Repair\RepairDetailMobileVw.cshtml" />
     <Content Include="Views\Count\CountIndex.cshtml" />
+    <Content Include="Views\Repair\ProblemListPCIndex.cshtml" />
+    <Content Include="Views\Repair\ReplyRepairPCDetailVw.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
